<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_cardboard">Card Board</string>
    <string name="action_fish_eye">Fish Eye</string>
    <string name="action_projection_type">Lens</string>
    <string name="action_rotation">Sensor Rotation</string>
    <string name="action_settings">Settings</string>
    <string name="action_sphere_map">360° Sphere Mapping</string>
    <string name="action_stereo_format">3D</string>
    <string name="app_name">VR Media Player</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_message_confirm_not_spherical_media">Sorry, can not open media</string>
    <string name="dialog_message_storage_permission">Open the Settings for this app?</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_title_confirm_not_spherical_media">Not a Spherical Media</string>
    <string name="dialog_title_media_format">Media Format</string>
    <string name="dialog_title_storage_permission">Storage Permission not Granted</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="open_media_storage">Open Media File</string>
    <string name="open_media_url">Open URL</string>
    <string name="photo_library">Photo Library</string>
    <string name="pref_app_version">Version</string>
    <string name="pref_app_version_key">version_key</string>
    <string name="pref_ask_format_open_media">Ask format when open media</string>
    <string name="pref_ask_format_open_media_key">media_open_format</string>
    <string name="pref_ask_format_open_media_summary">ON</string>
    <string name="pref_low_precision">Low precision high frame rate</string>
    <string name="pref_low_precision_key">low_precision</string>
    <string name="pref_low_precision_summary">OFF</string>
    <string name="pref_reset_settings">Reset Default Settings</string>
    <string name="pref_reset_settings_key">reset_default</string>
    <string name="pref_send_feedback">Send feedback</string>
    <string name="pref_show_hmd">Show Head Mounted Display</string>
    <string name="pref_show_hmd_key">show_hmd</string>
    <string name="pref_show_hmd_summary">Force Show Head Mounted Display Button</string>
    <string name="pref_show_sensor">Show Sensor Rotation</string>
    <string name="pref_show_sensor_key">show_sensor</string>
    <string name="pref_show_sensor_summary">Force Show Sensor Rotation</string>
    <string name="pref_stop_auto_pan">Stop auto rotation with touch</string>
    <string name="pref_stop_auto_pan_key">auto_pan_cancel</string>
    <string name="pref_stop_auto_pan_summary">ON</string>
    <string name="pref_web_link">About</string>
    <string name="projection_fisheye_1">Fisheye 1</string>
    <string name="projection_fisheye_2">Fisheye 2</string>
    <string name="projection_fisheye_3">Fisheye 3</string>
    <string name="projection_fisheye_4">Fisheye 4</string>
    <string name="projection_panorama">360°</string>
    <string name="projection_standard">Standard</string>
    <!--<string name="search_menu_title">Search</string>-->
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <!--<string name="status_bar_notification_info_overflow">999+</string>-->
    <string name="stereo_mono">Non-3D</string>
    <string name="stereo_ou">Over-Under</string>
    <string name="stereo_ou_comp">Over-Under\10Stretch</string>
    <string name="stereo_sbs">Side-by-Side</string>
    <string name="stereo_sbs_comp">Side-by-Side\10Stretch</string>
    <string name="stereo_stretch">Stretch</string>
    <string name="support_mail">support@poppolab.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="toast_enter_debug_mode">Enter Debug Mode</string>
    <string name="toast_exit_debug_mode">Exit Debug Mode</string>
    <string name="toast_http_fail">Http fail</string>
    <string name="toast_storage_permission">VR Media Player require grant storage permissions</string>
    <string name="toast_unplayable_media">Unplayable media type</string>
    <string name="video_library">Video Library</string>
    <string name="web_page">http://www.poppolab.com</string>
	<string name="https">https://</string>
</resources>
