<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/media_dialog_root" android:fadingEdge="none|horizontal|vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@+id/media_dialog_layout" android:padding="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <RadioGroup android:id="@+id/radio_group_projection" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="@style/TextAppearance.AppCompat" android:textSize="16sp" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_projection_type"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_equirectangular" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_panorama"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_rectilinear" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_standard"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_equidistant" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_fisheye_1"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_stereographic" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_fisheye_2"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_orthographic" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_fisheye_3"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_equisolid" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/projection_fisheye_4"/>
        </RadioGroup>
        <RadioGroup android:id="@+id/radio_group_stereo" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:theme="@style/LightRadioButton" android:textSize="16sp" android:textColor="@android:color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/action_stereo_format"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_mono" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/stereo_mono"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_side_by_side" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/stereo_sbs"/>
            <androidx.appcompat.widget.AppCompatRadioButton android:theme="@style/LightRadioButton" android:textColor="@android:color/white" android:id="@+id/radio_over_under" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/stereo_ou"/>
            <androidx.appcompat.widget.AppCompatCheckBox android:theme="@style/LightCheckBox" android:textColor="@android:color/white" android:id="@+id/check_stereo_stretch" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/stereo_stretch"/>
        </RadioGroup>
    </LinearLayout>
</ScrollView>
